# metaffi-core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SConscript_metaffi-core  system_tests.cpp
CLI/: CMakeLists.txt  ProtoParser.go  SConscript_cli  cli_executor.cpp  cli_executor.h  compiler.cpp  compiler.h  compiler_plugin_interface.h  compiler_plugin_interface_wrapper.cpp  compiler_plugin_interface_wrapper.h  conanfile.txt  exception_handler.cpp  exception_handler.h  go.mod  httplib.h  idl_block.cpp  idl_block.h  idl_extractor.cpp  idl_extrator.h  idl_plugin_interface_wrapper.cpp  idl_plugin_interface_wrapper.h  language_plugin_interface_wrapper.cpp  language_plugin_interface_wrapper.h  main.cpp  plugin_modules_repository.cpp  plugin_modules_repository.h  plugin_utils.cpp  plugin_utils.h  serializer_plugin_interface_wrapper.cpp  serializer_plugin_interface_wrapper.h  uri.h  zip_file.hpp
CLI/example/: CMakeLists.txt  README.md  compiler_example_test.cpp  example_api.cpp  example_api.h
CLI/go/: CMakeLists.txt  Compiler.go  GoAPI.go  GoCompiler_test.go  GuestTemplate.go  HostTemplate.go  LoadLibraryPosix.go  LoadLibraryWindows.go  ProtoTypeToGoType.go  README.md  constants.go  go.mod
CLI/go/test/: App.go  App.pb.go  App.proto  guest.go  host.go
CLI/go/test/example.com/foo/bar/: App.pb.go
CLI/python/: CMakeLists.txt  Compiler.go  GuestTemplate.go  HostTemplate.go  ProtoParser.go  ProtoTypeToPythonType.go  PythonAPI.go  PythonApi_test.go  PythonCompiler_test.go  go.mod  go.sum
CLI/python3/: CMakeLists.txt  Compiler.go  HostTemplate.go  PythonAPI.go  PythonCompiler_test.go  README.md  go.mod
CLI/utils/go/: ProtoParser.go  ProtoParser_test.go  ProtoTypeToGoType.go  TemplateParameters.go  go.mod
XLLR/: CMakeLists.txt  SConscript_xllr  args_helper.cpp  args_helpers.h  cdts.cpp  cdts.h  cdts_alloc.cpp  cdts_alloc.h  foreign_function.cpp  foreign_function.h  foreign_module.cpp  foreign_module.h  plugin_repository.cpp  plugin_repository.h  runtime_plugin.cpp  runtime_plugin.h  runtime_plugin_interface_wrapper.cpp  runtime_plugin_interface_wrapper.h  runtime_plugin_repository.cpp  runtime_plugin_repository.h  scope_guard.hpp  xcall_jit.cpp  xcall_jit.h  xcall_jit_test.cpp  xllr_api.cpp  xllr_api.h  xllr_plugin.cpp  xllr_plugin.h  xllr_plugin_interface.h  xllr_plugin_interface_wrapper.cpp  xllr_plugin_interface_wrapper.h  xllr_test.cpp
XLLR/example/: CMakeLists.txt  README.md  example_api.c  example_api.h  xllr_test.cpp
XLLR/go/: CMakeLists.txt  README.md  go_api.cpp  go_api.h  go_test_mod.go  modules_repository.cpp  modules_repository.h  xllr_go_test.cpp
XLLR/python/: CMakeLists.txt  python_api.cpp  python_api.h  utils.cpp  utils.h  xllr_python_test.cpp
XLLR/python3/: CMakeLists.txt  README.md  python_api.cpp  python_api.h  utils.cpp  xllr_python3_test.cpp
build-scripts/: README.md
build-scripts/macos/: build.sh  build_installer_package.sh  install.sh  uninstall.sh
build-scripts/ubuntu/: build.sh  build_installer_package.sh  install.sh  uninstall.sh
build-scripts/windows/: build.bat  build_installer_package.bat  install.bat  scripts.ps1  uninstall.bat
examples/: README.md  run_all_examples.bat  run_all_examples.sh
examples/RWgo2python/: PythonStringUtils.proto  run.go  run_example.bat  run_example.sh
examples/RWgo2python3/: PythonStringUtils.proto  run_example.bat
examples/RWpython2go/: run_example.bat  run_example.sh
examples/RWpython32go/: GoUtils.proto  run.py  run_example.bat  run_example.sh
examples/go/: GoUtils.go  run.go  run_example.bat  run_example.sh
examples/go2python/: PythonFuncs.proto  PythonicUtils.py  run.go  run_example.bat  run_example.sh
examples/go2python3/: run.go  run_example.bat
examples/python/: ComplexTypes.py  PythonFuncs.proto  PythonFuncsOpenFFIHost.py  PythonFuncs_openffi_guest.py  PythonFuncs_openffi_host.py  PythonFuncs_pb2.py  build_example.sh  run.py  run_example.bat  run_example.sh
examples/python2go/: run_example.bat  run_example.sh
examples/python2go2python/: PythonFuncs.proto  run.py  run_example.sh
examples/python3/: PythonFuncs.proto  run_example.bat  run_example.sh
examples/python32go/: ComplexTypes.go  GoFuncs.proto  run_example.bat  run_example.sh
installer/: build_installer.py  install_metaffi_template.py  postinst  prerm
utils/: function_loader.hpp  scope_guard.hpp
